# oop_labs_mephi

./: CMakeLists.txt  README.md
Brigade/: CMakeLists.txt
Brigade/include/: Brigade.h
Brigade/source/: Brigade.cpp
Descriptors/: CMakeLists.txt
Descriptors/connect/: Descriptors.h
Descriptors/include/: BaseDescriptor.h  MasterDescriptor.h  StandardWorkerDescritptor.h
Dialog/: CMakeLists.txt
Dialog/include/: BuidingApp.h  Menu.h
Dialog/source/: BuildingApp.cpp  Menu.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/source/: TestCase_WorkerTypes.cpp  TestCase_descriptors.cpp  main.cpp
Utils/: CMakeLists.txt
Utils/Assistance/: CMakeLists.txt
Utils/Assistance/include/: Utils.h
Utils/Assistance/source/: Utils.cpp
Utils/HashMap/: CMakeLists.txt
Utils/HashMap/include/: HashMap.h
WorkerTypes/: CMakeLists.txt
WorkerTypes/BrigadeLeader/: CMakeLists.txt
WorkerTypes/BrigadeLeader/include/: BrigadeLeader.h
WorkerTypes/BrigadeLeader/source/: BrigadeLeader.cpp
WorkerTypes/ContributingWorker/: CMakeLists.txt
WorkerTypes/ContributingWorker/include/: ContributingWorker.h
WorkerTypes/ContributingWorker/source/: ContributingWorker.cpp
WorkerTypes/Worker/: CMakeLists.txt
WorkerTypes/Worker/include/: Worker.h
WorkerTypes/Worker/source/: Worker.cpp
WorkingSite/: CMakeLists.txt
WorkingSite/include/: WorkingSite.h
WorkingSite/source/: WorkingSite.cpp
